--- a/02.Iniciando_Geopandas/02.Criando_ShapeFile.ipynb
+++ b/02.Iniciando_Geopandas/02.Criando_ShapeFile.ipynb
@@ -24,6 +24,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Carregando os dados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -179,6 +186,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uma grande diferença que faz perceber que um dataframe é a coluna **geometry**."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -326,6 +340,7 @@
    "source": [
     "import os\n",
     "\n",
+    "# Se não exestir o caminho, cria-o.\n",
     "dir = '../01.Mapas/Mapas/RJ-MINUC'\n",
     "if not os.path.exists(dir):\n",
     "    os.makedirs(dir)"
@@ -337,6 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Salva o conjunto de dados em um .shp(formato de arquivo contendo dados geoespaciais) e outras extensões necessárias\n",
     "rj.to_file(dir+'/RJ-MINUC.shp')"
    ]
   },
@@ -344,7 +360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "cria todas as outras extenções necessárias"
+    "# Teste caso estiver já criado o arquivo"
    ]
   },
   {
@@ -379,55 +395,6 @@
     "rj_munic = gpd.read_file(dir+'/RJ-MINUC.shp')\n",
     "rj_munic.plot(color='orange',edgecolor='black',figsize=(15,8))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -446,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
