--- a/04.Distancias/01.Obtendo_ate_a_estacao_de_metro_mais_proximo.ipynb
+++ b/04.Distancias/01.Obtendo_ate_a_estacao_de_metro_mais_proximo.ipynb
@@ -33,6 +33,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Carregando os dados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -1346,6 +1353,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Verificando o CRS das base de dados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -1405,8 +1419,6 @@
     }
    ],
    "source": [
-    "\n",
-    " v10    v\n",
     "metro.crs"
    ]
   },
@@ -1671,7 +1683,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calculando as distância para a estação de metro mais próximo"
+    "VIZUALIZAÇÃO DAS ESTAÇÕES DO METRÔ DA CIDADE DO RIO DE JANEIRO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculando as distâncias para a estação de metro mais próximo"
    ]
   },
   {
@@ -1925,8 +1944,16 @@
     }
    ],
    "source": [
+    "# Calcula as distancias possiveis com distance() e pega o valor mínimo com .min()\n",
     "geo_dados['Dist_metro'] = geo_dados['geometry'].apply(lambda x: metro.distance(x).min())\n",
     "geo_dados.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analisando a correlação entre  a coluna 'valor' e 'Dist_metro'"
    ]
   },
   {
@@ -2151,6 +2178,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Salvando em um arquivo as mundança"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
@@ -2176,7 +2210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
