--- a/04.Distancias/02.Agregando_outros_tipos_de_transporte.ipynb
+++ b/04.Distancias/02.Agregando_outros_tipos_de_transporte.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Carregando os dados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -1339,6 +1346,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modificando os CRS das bases de dados para um em comum"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -1919,6 +1933,13 @@
     "geo_dados.plot(ax=base, color='orange',alpha=0.2)\n",
     "trem.plot(ax=base,color='green')\n",
     "metro.plot(ax=base,color='black')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "VEJA QUE AQUI TEMOS A ESTAÇÕES DE TREM TAMBÉM FORA DO MUNICÍPIO, ABAIXO RETIRAMOS USANDO APENAS UM CONDIÇÃO SE O PONTO ESTÁ NOS LIMITES DO MUNICÍPIO."
    ]
   },
   {
@@ -2562,185 +2583,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Area</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "      <th>Quartos</th>\n",
-       "      <th>Suites</th>\n",
-       "      <th>Vagas</th>\n",
-       "      <th>Valor</th>\n",
-       "      <th>Dist_metro</th>\n",
-       "      <th>Dist_transporte</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Area</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.289299</td>\n",
-       "      <td>0.029982</td>\n",
-       "      <td>0.681112</td>\n",
-       "      <td>0.585817</td>\n",
-       "      <td>0.594699</td>\n",
-       "      <td>0.724397</td>\n",
-       "      <td>-0.036671</td>\n",
-       "      <td>-0.042684</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Latitude</th>\n",
-       "      <td>-0.289299</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.292822</td>\n",
-       "      <td>-0.225226</td>\n",
-       "      <td>-0.346480</td>\n",
-       "      <td>-0.274707</td>\n",
-       "      <td>-0.299038</td>\n",
-       "      <td>-0.217864</td>\n",
-       "      <td>0.358735</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Longitude</th>\n",
-       "      <td>0.029982</td>\n",
-       "      <td>0.292822</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.016882</td>\n",
-       "      <td>-0.221548</td>\n",
-       "      <td>-0.283960</td>\n",
-       "      <td>0.191868</td>\n",
-       "      <td>-0.874788</td>\n",
-       "      <td>-0.031812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Quartos</th>\n",
-       "      <td>0.681112</td>\n",
-       "      <td>-0.225226</td>\n",
-       "      <td>-0.016882</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.529611</td>\n",
-       "      <td>0.520499</td>\n",
-       "      <td>0.481216</td>\n",
-       "      <td>0.021794</td>\n",
-       "      <td>-0.014628</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Suites</th>\n",
-       "      <td>0.585817</td>\n",
-       "      <td>-0.346480</td>\n",
-       "      <td>-0.221548</td>\n",
-       "      <td>0.529611</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.621140</td>\n",
-       "      <td>0.464075</td>\n",
-       "      <td>0.188521</td>\n",
-       "      <td>0.006363</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Vagas</th>\n",
-       "      <td>0.594699</td>\n",
-       "      <td>-0.274707</td>\n",
-       "      <td>-0.283960</td>\n",
-       "      <td>0.520499</td>\n",
-       "      <td>0.621140</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.456596</td>\n",
-       "      <td>0.215787</td>\n",
-       "      <td>0.070240</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Valor</th>\n",
-       "      <td>0.724397</td>\n",
-       "      <td>-0.299038</td>\n",
-       "      <td>0.191868</td>\n",
-       "      <td>0.481216</td>\n",
-       "      <td>0.464075</td>\n",
-       "      <td>0.456596</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.195641</td>\n",
-       "      <td>-0.103653</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Dist_metro</th>\n",
-       "      <td>-0.036671</td>\n",
-       "      <td>-0.217864</td>\n",
-       "      <td>-0.874788</td>\n",
-       "      <td>0.021794</td>\n",
-       "      <td>0.188521</td>\n",
-       "      <td>0.215787</td>\n",
-       "      <td>-0.195641</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.261040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Dist_transporte</th>\n",
-       "      <td>-0.042684</td>\n",
-       "      <td>0.358735</td>\n",
-       "      <td>-0.031812</td>\n",
-       "      <td>-0.014628</td>\n",
-       "      <td>0.006363</td>\n",
-       "      <td>0.070240</td>\n",
-       "      <td>-0.103653</td>\n",
-       "      <td>0.261040</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     Area  Latitude  Longitude   Quartos    Suites     Vagas  \\\n",
-       "Area             1.000000 -0.289299   0.029982  0.681112  0.585817  0.594699   \n",
-       "Latitude        -0.289299  1.000000   0.292822 -0.225226 -0.346480 -0.274707   \n",
-       "Longitude        0.029982  0.292822   1.000000 -0.016882 -0.221548 -0.283960   \n",
-       "Quartos          0.681112 -0.225226  -0.016882  1.000000  0.529611  0.520499   \n",
-       "Suites           0.585817 -0.346480  -0.221548  0.529611  1.000000  0.621140   \n",
-       "Vagas            0.594699 -0.274707  -0.283960  0.520499  0.621140  1.000000   \n",
-       "Valor            0.724397 -0.299038   0.191868  0.481216  0.464075  0.456596   \n",
-       "Dist_metro      -0.036671 -0.217864  -0.874788  0.021794  0.188521  0.215787   \n",
-       "Dist_transporte -0.042684  0.358735  -0.031812 -0.014628  0.006363  0.070240   \n",
-       "\n",
-       "                    Valor  Dist_metro  Dist_transporte  \n",
-       "Area             0.724397   -0.036671        -0.042684  \n",
-       "Latitude        -0.299038   -0.217864         0.358735  \n",
-       "Longitude        0.191868   -0.874788        -0.031812  \n",
-       "Quartos          0.481216    0.021794        -0.014628  \n",
-       "Suites           0.464075    0.188521         0.006363  \n",
-       "Vagas            0.456596    0.215787         0.070240  \n",
-       "Valor            1.000000   -0.195641        -0.103653  \n",
-       "Dist_metro      -0.195641    1.000000         0.261040  \n",
-       "Dist_transporte -0.103653    0.261040         1.000000  "
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Analisando a correlação dos dados\n",
     "geo_dados.corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Salvando as modificações em um arquivo"
    ]
   },
   {
@@ -2751,34 +2606,6 @@
    "source": [
     "geo_dados.to_file('../01.Dados/Mapas/RJ-DATASET/DATASET.shp')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2797,7 +2624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
