--- a/05.Informacoes_censitarias/01.Setores_censitarios.ipynb
+++ b/05.Informacoes_censitarias/01.Setores_censitarios.ipynb
@@ -30,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import zipfile\n",
+    "import os # para navegar pelos diretórios do sistema operacional\n",
+    "import zipfile # zipa os arquivos criados \n",
     "import shutil # apagar pasta de arquivos temporários"
    ]
   },
@@ -41,6 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# cria um diretório caso não exista.\n",
     "dir = '../01.Dados/Mapas/RJ-SETOR/TEMP'\n",
     "if not os.path.exists(dir):\n",
     "    os.makedirs(dir)"
@@ -95,6 +96,7 @@
     }
    ],
    "source": [
+    "# Recebe os nomes dos arquivos da pasta '/DADOS'\n",
     "filenames = []\n",
     "for root, dirs, files in os.walk('../01.Dados/Mapas/RJ-SETOR/DADOS'):\n",
     "    filenames = files\n",
@@ -107,6 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Coleta apenas os nomes dos arquivos .zip e armazena em uma lista.\n",
     "for item in filenames:\n",
     "    zip_ref = zipfile.ZipFile('../01.Dados/Mapas/RJ-SETOR/DADOS/'+item,'r')\n",
     "    zip_ref.extractall(dir)\n",
@@ -139,6 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Concatena os nomes e salva em um .shp\n",
     "setor = pd.concat([gpd.read_file(dir +'/'+ item[:-4] + '_setor.shp') for item in filenames],ignore_index=True)"
    ]
   },
@@ -148,6 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Apaga os arquivos criados temporáriamente\n",
     "shutil.rmtree(dir)"
    ]
   },
@@ -501,6 +506,7 @@
     }
    ],
    "source": [
+    "#Modifica o crs da base de dados\n",
     "setor = setor.to_crs('+proj=utm +zone=23 +south +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=km +no_defs')\n",
     "setor.crs"
    ]
@@ -535,6 +541,13 @@
    ],
    "source": [
     "setor.plot(color='white',edgecolor='black',figsize=(15,8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SETORES CENSITÁRIOS DO MUNICÍPIO DO RIO DE JANEIRO."
    ]
   },
   {
@@ -580,32 +593,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "BAIRRO DO BOTAFOGO."
+   ]
   }
  ],
  "metadata": {
@@ -624,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
