--- a/06.Vizualizacoes/02.Mapas_de_calor.ipynb
+++ b/06.Vizualizacoes/02.Mapas_de_calor.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Carregando os dados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -27,6 +34,13 @@
     "geo_dados = gpd.read_file('../01.Dados/Mapas/RJ-DATASET/DATASET.shp')\n",
     "setor= gpd.read_file('../01.Dados/Mapas/RJ-SETOR/RJ-SETOR.shp')\n",
     "bairro = gpd.read_file('../01.Dados/Mapas/RJ-BAIRRO/RJ-BAIRRO.shp')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modificando o CRS das base de dados"
    ]
   },
   {
@@ -71,8 +85,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculando o centroide do primeiro elemento do geodataframe\n",
     "y = rj.centroid.y.iloc[0]\n",
     "x = rj.centroid.x.iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculando o centróide da base de dados e calculando o 'peso' desses valores"
    ]
   },
   {
@@ -1110,6 +1132,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mapa de calor iterativo com folium"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -1144,27 +1173,6 @@
     "base.save('HeatMap.html')\n",
     "base"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1183,7 +1191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
